<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="address"
                type="com.example.address.model.Address" />
    </data>
    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:elevation="4dp"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Dark" />

        <FrameLayout android:layout_width="match_parent"
                     android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginEnd="32dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginRight="32dp"
                            android:layout_marginTop="@dimen/margin_add_address_widget"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginLeft="32dp"
                            android:layout_marginStart="32dp">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:hint="@string/label_name"
                                android:layout_height="match_parent"
                                android:inputType="textCapWords"
                                android:text="@={address.firstName}"
                                app:error="@{address.firstNameError}"
                                android:maxLength="25"
                                android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText3"
                            android:layout_marginTop="@dimen/margin_add_address_widget"
                            app:layout_constraintTop_toBottomOf="@id/editText"
                            app:layout_constraintEnd_toEndOf="@id/editText"
                            app:layout_constraintStart_toStartOf="@id/editText">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:hint="@string/label_address_line_1"
                                android:inputType="textCapWords"
                                android:layout_height="match_parent"
                                android:text="@={address.address1}"
                                app:error="@{address.address1Error}"
                                android:maxLength="50"
                                android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText2"
                            android:layout_marginTop="@dimen/margin_add_address_widget"
                            app:layout_constraintTop_toBottomOf="@id/editText3"
                            app:layout_constraintEnd_toEndOf="@id/editText3"
                            app:layout_constraintStart_toStartOf="@id/editText3">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:hint="@string/label_address_line_2"
                                android:inputType="textCapWords"
                                android:layout_height="match_parent"
                                android:text="@={address.address2}"
                                app:error="@{address.address2Error}"
                                android:maxLength="50"
                                android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:ems="10"
                            android:id="@+id/editText4"
                            android:layout_marginTop="@dimen/margin_add_address_widget"
                            app:layout_constraintTop_toBottomOf="@id/editText2"
                            app:layout_constraintEnd_toEndOf="@id/editText2"
                            app:layout_constraintStart_toStartOf="@id/editText2">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:hint="@string/label_landmark"
                                android:inputType="textCapWords"
                                android:layout_height="match_parent"
                                android:maxLength="25"
                                android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText5"
                            android:layout_marginTop="@dimen/margin_add_address_widget"
                            app:layout_constraintTop_toBottomOf="@id/editText4"
                            app:layout_constraintEnd_toEndOf="@id/editText4"
                            app:layout_constraintStart_toStartOf="@id/editText4">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:hint="@string/label_city"
                                android:inputType="textCapWords"
                                android:layout_height="match_parent"
                                android:text="@={address.city}"
                                app:error="@{address.cityError}"
                                android:maxLength="25"
                                android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText6"
                            android:layout_marginTop="@dimen/margin_add_address_widget"
                            app:layout_constraintTop_toBottomOf="@id/editText5"
                            app:layout_constraintEnd_toEndOf="@id/editText5"
                            app:layout_constraintStart_toStartOf="@id/editText5">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:hint="@string/label_state"
                                android:inputType="textCapWords"
                                android:layout_height="match_parent"
                                android:text="@={address.stateName}"
                                android:maxLength="25"
                                android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText7"
                            android:layout_marginTop="@dimen/margin_add_address_widget"
                            app:layout_constraintTop_toBottomOf="@id/editText6"
                            app:layout_constraintEnd_toEndOf="@id/editText6"
                            app:layout_constraintStart_toStartOf="@id/editText6">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:hint="@string/label_pincode"
                                android:inputType="number"
                                android:layout_height="match_parent"
                                android:text="@={address.zipCode}"
                                app:error="@{address.zipCodeError}"
                                android:maxLength="6"
                                android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                            android:text="@string/text_default_address_cb"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/cb_default_address"
                            app:layout_constraintStart_toStartOf="@id/editText7"
                            android:layout_marginTop="@dimen/margin_add_address_widget"
                            app:layout_constraintTop_toBottomOf="@id/editText7"
                            android:checked="true" />

                    <ImageButton
                            android:contentDescription="@string/content_description_add_fab"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_arrow_right"
                            android:id="@+id/imageButton"
                            android:layout_marginTop="@dimen/margin_add_address_widget"
                            app:layout_constraintTop_toBottomOf="@id/cb_default_address"
                            app:layout_constraintEnd_toEndOf="@id/editText7"
                            app:layout_constraintStart_toStartOf="@id/editText7"
                            app:layout_constraintHorizontal_bias="1.0"
                            android:background="@color/colorAccent"
                            android:padding="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="@dimen/margin_add_address_widget" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>
            <include layout="@layout/layout_progress_bar" />
        </FrameLayout>
    </LinearLayout>
</layout>